Fix painting of non-symbolic icons which are fallbacks for symbolic

A symbolic icon may be missing in an icon theme which may result in
loading the non-symbolic fallback. For example "window-close" may be
loaded instead of "window-close-symbolic". Then this fallback icon
should not be treated as symbolic.

BUG: 451538
FIXED-IN: 5.107


(cherry picked from commit 66c6a75d44353c15101d872396be66b92d1c33e6)