src/icon.cpp
@@ -61,9 +61,7 @@ void Icon::setSource(const QVariant &icon)
 
     if (icon.type() == QVariant::String) {
         const QString iconSource = icon.toString();
-        m_isMaskHeuristic = (iconSource.endsWith(QLatin1String("-symbolic")) //
-                             || iconSource.endsWith(QLatin1String("-symbolic-rtl")) //
-                             || iconSource.endsWith(QLatin1String("-symbolic-ltr")));
+        updateIsMaskHeuristic(iconSource);
         Q_EMIT isMaskChanged();
     }
 
@@ -445,6 +443,12 @@ QImage Icon::findIcon(const QSize &size)
         } else {
             if (icon.isNull()) {
                 icon = m_theme->iconFromTheme(iconSource, m_color);
+                if (m_isMaskHeuristic && icon.name() != iconSource) {
+                    updateIsMaskHeuristic(icon.name());
+                    if (!m_isMaskHeuristic) {
+                        Q_EMIT isMaskChanged();
+                    }
+                }
             }
         }
         if (!icon.isNull()) {
@@ -619,6 +623,13 @@ void Icon::updatePaintedGeometry()
         m_paintedHeight = newHeight;
         Q_EMIT paintedAreaChanged();
     }
+}
+
+void Icon::updateIsMaskHeuristic(const QString &iconSource)
+{
+    m_isMaskHeuristic = (iconSource.endsWith(QLatin1String("-symbolic")) //
+                         || iconSource.endsWith(QLatin1String("-symbolic-rtl")) //
+                         || iconSource.endsWith(QLatin1String("-symbolic-ltr")));
 }
 
 void Icon::itemChange(QQuickItem::ItemChange change, const QQuickItem::ItemChangeData &value)
